@@ -239,3 +239,5 @@ En ver variables que diga puntero vars donde está y a donde apunta
 -estilos gui en documentación
 
 -en ventana info offsets next, ula separado de lores
+
+-al hacer assemble se debe poner en modo step si estaba en modo step
