@@ -4753,7 +4753,10 @@ void debug_get_ioports(char *stats_buffer)
 		sprintf (buf_linea,"\nTBBlue port 123b: %02X\n",tbblue_port_123b);
   		sprintf (&stats_buffer[index_buffer],"%s",buf_linea); index_buffer +=strlen(buf_linea);  
 
-  								sprintf (buf_linea,"\nTBBlue last register: %02X\n",tbblue_last_register);
+		sprintf (buf_linea,"TBBlue port 123b_2: %02X\n",tbblue_port_123b_second_byte);
+  		sprintf (&stats_buffer[index_buffer],"%s",buf_linea); index_buffer +=strlen(buf_linea);            
+
+  								sprintf (buf_linea,"TBBlue last register: %02X\n",tbblue_last_register);
   								sprintf (&stats_buffer[index_buffer],"%s",buf_linea); index_buffer +=strlen(buf_linea);
 
 
