@@ -34,6 +34,7 @@ Improved Audio to .mid exporter: allow changing instrument
 Fixed file previews on corrupted files: pzx, tap
 Fixed rearranging windows and using total window height
 Fixed Next ULA Scroll to use registers 0x26 and 0x27
+Fixed Next tbblue port 123b and new standard
 
 
 Version 9.2 - Cliff Hanger edition. 05 April 2021
